Sugestão de casas como inovação de produto.

--- a/Reunioes.org
+++ b/Reunioes.org
@@ -161,12 +161,14 @@ CLOSED: [2021-05-03 seg 15:04]
 
 - Assumir que somente trabalhadores pagam alguel?
 - Como incluir produtividade do trabalho?
+  + Supõe que são famílias e não trabalhadores
 - Discutir a inclusão do investimento residencial nos modelos ABM canônico?
 - Discussão espacial para outro capítulo/modelo?
 - Preço dos imóveis inicialmente exógenos e estocásticos?
   + Seguindo algum ciclo financeiro
   + L: Pró ciclico
 - Como as famílias alocam a riqueza entre casas e ativos financeiros?
+  + Incluir taxa de retorno implícita
 - Mais de um setor?
   + Bens de consumo
   + Bens de capital
@@ -183,6 +185,7 @@ CLOSED: [2021-05-03 seg 15:04]
   + Donos da terra só recebem alugueis?
 - Compra de casas...
   + Somente via hipotecas ou famílias ricas podem comprar a partir da riqueza acumulada?
+  + Incluir casas como inovação de produto tal como nos ABM convencionais
 - Acesso a crédito...
   + Firmas possuirão restrição?
     Famílias ricas sem restrição por hipótese?
