Iniciando resposta aos Pareceristas. Paper retornado a versão submetida antes.

--- a/Articles/SFC/Reunioes.org
+++ b/Articles/SFC/Reunioes.org
@@ -87,3 +87,15 @@ Discutir literatura empírica (econométrica) e discutir resultados. Mencionar q
 *** TODO Primeira versão só com mudanças no modelo $\Rightarrow$ Nova versão base de trabalho 
 - Mexer pouco no texto
 **** TODO Corrigir simulação com dados reais
+
+* Primeira rodada de pareceristas
+
+** Mudanças gerais
+
+*** SUGESTÃO: Função consumo capitalista dependendo da renda disponível
+
+**** ALTERNATIVA: Consumo dependendo da renda e da riqueza tal como na literatura
+
+** Parecerista A
+
+** Parecerista B
