--- a/Articles/SFC/tabs/sobol.tex
+++ b/Articles/SFC/tabs/sobol.tex
@@ -13,7 +13,7 @@ $rm$       &          Deposits interest rate &                           - &    
 $\phi_0$   &  $g_{I_h}$ autonomous component &                        0.32 &      Destabilizing \\
 $\phi_1$   &     own interest rate parameter &                           - &      Destabilizing \\
 $\pi$      &           real estate inflation &                           - &      Destabilizing \\
-$R$        &              $C_k$ share on $Z$ &                        0.91 &        Stabilizing \\
+% $R$        &              $C_k$ share on $Z$ &                        0.91 &        Stabilizing \\
 \bottomrule
 \end{tabular}
 \end{table}
