--- a/Articles/SFC/Simulation_referee.org
+++ b/Articles/SFC/Simulation_referee.org
@@ -4,9 +4,9 @@ bibliography:refs.bib
 
 ** General config
 
-#+PROPERTY: header-args:python :session SFC  :exports none :results output :cache no :tangle ./codes/SFC_setup.py :eval never-export
+#+PROPERTY: header-args:python :session SFC_referee  :exports none :results output :cache no :tangle ./codes/SFC_setup_referee.py :eval never-export
 
-#+BEGIN_SRC python 
+#+BEGIN_SRC python :tangle ./codes/SFC_initial_referee.py
 from pysolve3.model import Model
 from pysolve3.utils import SolveSFC, ShockModel, SummaryShock, SFCTable
 
@@ -28,7 +28,9 @@ def model(
     gamma_F = 0.08,
     gamma_u = 0.09, # Fazzarri Calibration
     g_Z = 0.025, # Fazzarri Calibration
-    omega = 0.5*0.5, # Fazzaru alpha*omwga
+    omega = 0.5*0.5, # Fazzari alpha*omwga
+    alpha_k = 0.3, # Marginal propensity to consume for capitalists
+    alpha_kv = 0.03, # Marginal propensity to consume for capitalists out of wealth
     rm = 0.01,
     spread_l = 0,
     spread_mo = 0,
@@ -46,7 +48,7 @@ def model(
   phparam: 1.0 means no inflation
   """
   model = Model()
-  model.set_var_default(0) 
+  model.set_var_default(0)
   model.var('C', desc='Consumption')
   model.var('Cw', desc='Workers Consumption', default=112)
   model.var('Ck', desc='Capitalist Consumption', default=68)
@@ -72,7 +74,7 @@ def model(
   model.var('K_kr', desc="nominal % of Kf in total")
   model.var('L', desc='Total Loans')
   model.var('Lf', desc='Firms Loans')
-  model.var('Lk', desc='Capitalist Loans')
+  # model.var('Lk', desc='Capitalist Loans')
   model.var('M', desc='Money deposits')
   model.var('M_h', desc='Households deposits')
   model.var('MO', desc='Mortgages')
@@ -97,8 +99,10 @@ def model(
   model.var('YDw', desc='Workers disposable income')
   model.var('YDk', desc='Capitalists disposable income')
   model.var('Z', desc='Autonomous expenditures')
-  
+
   model.param('alpha', desc='Propensity to consume out of wages', default=alpha)
+  model.param('alpha_k', desc='Capitalists marginal propensity to consume', default=alpha_k)
+  # model.param('alpha_kv', desc='Capitalists marginal propensity to consume out of Fin. Wealth', default=alpha_kv)
   model.param('gamma_F', desc='% of undistributed profits', default=gamma_F)
   model.param('gamma_u', desc='Adjustment parameter for the marginal propensity to invest', default=gamma_u)
   model.param('omega', desc='Wage-share', default = omega)
@@ -113,7 +117,7 @@ def model(
   model.param('infla', desc='infla value', default = infla)
   model.param('gC', desc='Autonomous consumption growth rate', default = gC)
   model.param('real_data', desc='Real data flag. 1 if using observed data, 0 otherwise', default = real)
-  
+
   # General equations
   model.add('C = Cw + Ck')
   model.add('I_t = I_f + I_h') # Eq2
@@ -121,29 +125,33 @@ def model(
   model.add('u = Y/Yk') # Eq 5
   model.add('W = omega*Y') # Eq 6
   model.add('gk = h*u/v') # Eq 7
-  model.add('Knom = K_HD*ph + K_f') # Eq 8 
-  model.add('K = K_HD + K_f') # Eq 8 
+  model.add('Knom = K_HD*ph + K_f') # Eq 8
+  model.add('K = K_HD + K_f') # Eq 8
   model.add('Z = I_h + Ck') # Eq 9
   model.add('Y = C + I_t') # Eq1
-  
+
   # Workers equations
   model.add('Cw = alpha*W') # Eq 14
   model.add('YDw = W') # Eq 10
   model.add('S_hw = YDw - Cw') # Eq 11
   model.add('NFW_hw = S_hw')
-    
+
   # Capitalist equations
-  model.add('YDk = FD + rm*M_h(-1) - rmo*MO(-1) - rl*Lk(-1)')
-  
-  model.add('Ck = R*Z + real_data*Ck(-1)*(1+gC)') # In real data, gC >0, real_data ==1 and R == 0
+  # model.add('YDk = FD + rm*M_h(-1) - rmo*MO(-1) - rl*Lk(-1)') # Removing Lk
+  model.add('YDk = FD + rm*M_h(-1) - rmo*MO(-1)')
+  model.add('Ck = alpha_k*YDk') # New capitalist consumption equation
+  # model.add('Ck = R*Z + real_data*Ck(-1)*(1+gC)') # In real data, gC >0, real_data ==1 and R == 0
   model.add('S_hk = YDk - Ck') # Eq 11
   model.add('d(MO) = I_h') # Eq 12
-  model.add('d(Lk) = Ck')
-  model.add('d(M_h) = S_hk + d(Lk)')
-  model.add('V_h =  M_h  + K_HD*ph - MO - Lk') # Eq 15 
-  model.add('V_hr =  M_h  + K_HD - MO - Lk') # Eq 15 
+  # model.add('d(Lk) = Ck')
+  # model.add('d(M_h) = S_hk + d(Lk)') # Removing Lk
+  model.add('d(M_h) = S_hk')
+  # model.add('V_h =  M_h  + K_HD*ph - MO - Lk') # Eq 15 # Removing Lk
+  model.add('V_h =  M_h  + K_HD*ph - MO') # Eq 15
+  # model.add('V_hr =  M_h  + K_HD - MO - Lk') # Eq 15 #Removing Lk
+  model.add('V_hr =  M_h  + K_HD - MO') # Eq 15
   model.add('NFW_h = S_hk - I_h') # Eq 16
-  
+
   # Firms
   model.add('d(Lf) = I_f - FU') # Eq 15
   model.add('FT = (1-omega)*Y') # Eq 16
@@ -156,34 +164,36 @@ def model(
   model.add('h = h(-1)*gamma_u*(u-un) + h(-1)') # Eq 21 # Version without corridor
   model.add('V_f = K_f - Lf') # Eq 22
   model.add('NFW_f = FU - I_f') # Eq 23
-  
+
   # Banks
   model.add('rmo = (1+spread_mo)*rm') # Eq 25
   model.add('rl = (1+spread_l)*rm') # Eq 26
   model.add('NFW_b = rl*L(-1) + rmo*MO(-1) - rm*M(-1)') # Eq 28
   model.add('V_b = L + MO - M') # Eq 27
-  model.add('d(L) = d(Lf) + d(Lk)')
+  # model.add('d(L) = d(Lf) + d(Lk)') # Removing Lk
+  model.add('d(L) = d(Lf)')
   model.add('d(M) = d(M_h)')
-  
-  
+
+
   # Residential investment
   model.add('K_HS = K_HD') # Eq 29
   model.add('Is = I_h')
   model.add('d(K_HD) = I_h') # Eq 30
   model.add('I_h = (1+g_Z)*I_h(-1)') # Eq 31
-  model.add('K_k = K_HD/K') 
-  model.add('K_kr = K_k*ph') 
+  model.add('K_k = K_HD/K')
+  model.add('K_kr = K_k*ph')
   model.add('ph =(1+infla)*ph(-1)')
-  model.add('own = ((1+rmo)/(1+infla)) -1')  
+  model.add('own = ((1+rmo)/(1+infla)) -1')
   model.add('g_Z = phi_0 - phi_1*own')
 
   # Stock flow ration (in progress)
 
   # Aux variables
 
-  model.add('DT = MO + Lk')
+  # model.add('DT = MO + Lk')
+  model.add('DT = MO')
   model.add('DN = DT - M')
-  
+
   return model
 
 def clock_plots(shock, filename, variable):
@@ -192,27 +202,27 @@ def clock_plots(shock, filename, variable):
     shock["I/Y"] = shock["I_t"]/shock["Y"]
     shock["Z/Y"] = shock["Z"]/shock["Y"]
     shock["gY"] = shock["Y"].pct_change()
-    
+
     sns.set_context('talk')
     fig, ax = plt.subplots(1,3,figsize=(24,5)
                           )
-    
-    sns.scatterplot(y = 'Ih/Y', x='u', data=shock, size="TIME", sizes = (1,200), 
+
+    sns.scatterplot(y = 'Ih/Y', x='u', data=shock, size="TIME", sizes = (1,200),
                     color = 'black', legend=False, ax=ax[0])
     sns.lineplot(y = 'Ih/Y', x='u', data=shock, sort=False, color = 'black', ax=ax[0])
     ax[0].set_title("(A) Residential investment share on GDP\n VS. Capacity utilization ratio")
-    
+
     sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,200), color = 'black', legend=False, ax=ax[1])
     sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'black', ax=ax[1])
     ax[1].set_title("(B) Autonomous Expenditure share\n VS Capacity utilization")
-    
+
     sns.scatterplot(y = 'I/Y', x='gY', data=shock, size="TIME", sizes = (1,200), color = 'black', legend=False, ax=ax[2])
     sns.lineplot(y = 'I/Y', x='gY', data=shock, sort=False, color = 'black', ax=ax[2])
     ax[2].set_title("(C) Total investment share\n VS GDP growth rate")
-    
-    
+
+
     sns.despine()
-    
+
     fig.savefig("./figs/" + filename, dpi = 600)
     plt.clf()
     plt.close('all')
@@ -220,7 +230,7 @@ def clock_plots(shock, filename, variable):
 def plot_shock(filename, shock, df):
     """
     This function plots some selected variables
-    
+
     filename: name to save the plot (str)
     shock: df returned by ShockModel function
     """
@@ -228,19 +238,19 @@ def plot_shock(filename, shock, df):
     fig, ax = plt.subplots(2,2, figsize=(16,10))
 
     shock[["Y"]].pct_change().plot(
-        title = "Growth rates", ax = ax[0,0], 
+        title = "Growth rates", ax = ax[0,0],
         ls = ('--'), lw=3,
     )
     shock[["K"]].pct_change().plot(
-        title = "Growth rates", ax = ax[0,0], 
+        title = "Growth rates", ax = ax[0,0],
         ls = (':'), lw=3
     )
     shock[["I_h"]].pct_change().plot(
-        title = "Growth rates", ax = ax[0,0], 
+        title = "Growth rates", ax = ax[0,0],
         ls = ('-'), lw=3,
     )
     shock[["I_f"]].pct_change().plot(
-        title = "Growth rates", ax = ax[0,0], 
+        title = "Growth rates", ax = ax[0,0],
         ls = ('-.'), lw=3,
     )
     ax[0,0].axhline(y=shock["g_Z"].iloc[-1], color = "black", ls = "--", lw=2.5)
@@ -252,7 +262,7 @@ def plot_shock(filename, shock, df):
 
     ((shock["Z"]/shock['Y'])).plot(
         title = "Autonomous expenditures share on GDP", ax = ax[0,1], ls = ('-'), lw=3, color='darkred')
-    
+
     ax[0,1].set_ylim(auto=True)
     ax[0,1].legend(loc='upper center', bbox_to_anchor=(0.5, -0.08),
                    labels=['$Z/Y$'],
@@ -266,7 +276,7 @@ def plot_shock(filename, shock, df):
     shock['h'].plot(title = 'Marginal propensity to invest', ax=ax[1,1], legend = False, color = "darkred", lw = 3, )
     ax[1,1].axhline(y = df['h'].iloc[-1], ls ='--', color = "gray")
     ax[1,1].ticklabel_format(useOffset=False)
-    
+
     sns.despine()
     plt.tight_layout(rect=[0, 0.03, 1, 0.95])
 
@@ -278,17 +288,18 @@ def plot_shock(filename, shock, df):
 def plot_norms(filename, shock, df):
     """
     This function plots some selected variables
-    
+
     filename: name to save the plot (str)
     shock: df returned by ShockModel function
     """
     sns.set_context('talk')
     fig, ax = plt.subplots(2,2, figsize=(16,10))
 
-    ((shock['YDk']/(shock["MO"] + shock["Lk"] - shock["M"]))).plot(title = "Capitalists households\nFlow-Stock ratios", ax = ax[0,0], ls = ('-'), lw=3)
+    # ((shock['YDk']/(shock["MO"] + shock["Lk"] - shock["M"]))).plot(title = "Capitalists households\nFlow-Stock ratios", ax = ax[0,0], ls = ('-'), lw=3)
+    ((shock['YDk']/(shock["MO"] - shock["M"]))).plot(title = "Capitalists households\nFlow-Stock ratios", ax = ax[0,0], ls = ('-'), lw=3)
     ((shock["YDk"]/shock['V_hr'])).plot(ax = ax[0,0], ls = ('-'), lw=3)
     ((shock["YDk"]/shock['V_h'])).plot(ax = ax[0,0], ls = ('-'), lw=3)
-    
+
     ax[0,0].set_yticklabels(['{:,.1%}'.format(x) for x in ax[0,0].get_yticks()])
     ax[0,0].legend(loc='upper center', bbox_to_anchor=(0.5, -0.08),
                    labels = [
@@ -298,17 +309,18 @@ def plot_norms(filename, shock, df):
                             ],
               fancybox=True, shadow=True, ncol=2)
     #ax[0,0].ticklabel_format(useOffset=False)
-    
-    shock['K_k'].plot(color = "darkred", 
-                      title = "Housing share on\nTotal Capital Stock", 
+
+    shock['K_k'].plot(color = "darkred",
+                      title = "Housing share on\nTotal Capital Stock",
                       label = "$\k$", legend = False, ax = ax[0,1], lw = 3, )
     ax[0,1].axhline(y = df['K_k'].iloc[-1], ls ='--', color = "gray")
     ax[0,1].ticklabel_format(useOffset=False)
-    
+
     (shock["MO"]*shock["rmo"][1:]/shock['YDk'][1:]).plot(
         title="Debt service on\nDisposable income", ax = ax[1,0], ls = ('-'), lw=3)
-    ((shock["Lk"]*shock["rl"][1:])/shock['YDk'][1:]).plot(ax = ax[1,0], ls = ('-'), lw=3)
-    ((shock["MO"]*shock["rmo"][1:] + shock["Lk"]*shock["rl"][1:])/shock['YDk'][1:]).plot( ax = ax[1,0], ls = ('-'), lw=3)
+    # ((shock["Lk"]*shock["rl"][1:])/shock['YDk'][1:]).plot(ax = ax[1,0], ls = ('-'), lw=3)
+    # ((shock["MO"]*shock["rmo"][1:] + shock["Lk"]*shock["rl"][1:])/shock['YDk'][1:]).plot( ax = ax[1,0], ls = ('-'), lw=3)
+    ((shock["MO"]*shock["rmo"][1:])/shock['YDk'][1:]).plot( ax = ax[1,0], ls = ('-'), lw=3)
     ax[1,0].set_yticklabels(['{:,.1%}'.format(x) for x in ax[1,0].get_yticks()])
     ax[1,0].legend(loc='upper center', bbox_to_anchor=(0.5, -0.1),
                    labels = [
@@ -317,36 +329,37 @@ def plot_norms(filename, shock, df):
                        'Total'
                             ],
               fancybox=True, shadow=True, ncol=2)
-    
+
     (shock['FT']/shock['K_f']).plot(ax=ax[1,1], label='Gross profit rate')
     (shock['Fn']/shock['K_f']).plot(ax=ax[1,1], label='Net profit rate')
     ax[1,1].set_yticklabels(['{:,.1%}'.format(x) for x in ax[1,0].get_yticks()])
     ax[1,1].legend()
 
-    
+
     sns.despine()
     plt.tight_layout(rect=[0, 0.03, 1, 0.95])
-    
+
     fig.savefig("./figs/" + filename, dpi = 300)
     plt.clf()
 
     plt.close('all')
 
 def other_plots(shock, df):
-  
-    fig, ax = plt.subplots()  
+
+    fig, ax = plt.subplots()
     (shock['MO']/(shock['M'])).plot(title="Mortgage as % of deposits", ax=ax)
     sns.despine()
     #plt.show()
     plt.clf()
 
-    fig, ax = plt.subplots()  
-    ((shock['MO'] + shock['Lk'])/(shock['K'])).plot(title="Capitalistas debt as % of total capital stock", ax=ax)
+    fig, ax = plt.subplots()
+    # ((shock['MO'] + shock['Lk'])/(shock['K'])).plot(title="Capitalistas debt as % of total capital stock", ax=ax)
+    ((shock['MO'])/(shock['K'])).plot(title="Capitalistas debt as % of total capital stock", ax=ax)
     sns.despine()
     #plt.show()
     plt.clf()
 
-    
+
     fig, ax = plt.subplots()
     (shock['FT']/shock['K_f']).plot(ax=ax, label='Gross profit rate')
     (shock['Fn']/shock['K_f']).plot(ax=ax, label='Net profit rate')
@@ -354,7 +367,7 @@ def other_plots(shock, df):
     sns.despine()
     plt.clf()
 
-    
+
     fig, ax = plt.subplots()
     (shock['YDk']/shock['K_HD']).plot(ax=ax, label='Real', title="Disposible income as % of Housing")
     (shock['YDk']/(shock['K_HD']*shock['ph'])).plot(ax=ax, label='Nominal')
@@ -362,30 +375,32 @@ def other_plots(shock, df):
     sns.despine()
     #plt.show()
     plt.clf()
-    
+
     fig, ax = plt.subplots()
-    (shock['NFW_h']/(shock['Lk'] + shock['MO']) - (shock['rm'] - shock['g_Z'])).plot(title = 'Household debt stability',ax=ax)
-    ax.axhline(y = ((df['NFW_h']/(df['Lk'] + df['MO'])) - (df['rm'] - df['g_Z'])).iloc[-1], ls ='--', color = "gray")
-    
+    # (shock['NFW_h']/(shock['Lk'] + shock['MO']) - (shock['rm'] - shock['g_Z'])).plot(title = 'Household debt stability',ax=ax)
+    (shock['NFW_h']/(shock['MO']) - (shock['rm'] - shock['g_Z'])).plot(title = 'Household debt stability',ax=ax)
+    # ax.axhline(y = ((df['NFW_h']/(df['Lk'] + df['MO'])) - (df['rm'] - df['g_Z'])).iloc[-1], ls ='--', color = "gray")
+    ax.axhline(y = ((df['NFW_h']/(df['MO'])) - (df['rm'] - df['g_Z'])).iloc[-1], ls ='--', color = "gray")
+
     sns.despine()
     plt.tight_layout(rect=[0, 0.03, 1, 0.95])
     #plt.show()
     plt.clf()
-    
+
     fig, ax = plt.subplots(1,1, figsize=(8,5))
 
     shock[["MO", "L"]].apply(lambda x: x/(shock["MO"] + shock['L'])).plot(kind = "area",stacked = True ,title = "Credit (as % Passives)", ax=ax)
     ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))
     ax.axhline(y = 1, color = "black", ls = "--")
     ax.axhline(y = 0, color = "black", ls = "--")
-    
+
     sns.despine()
     plt.tight_layout(rect=[0, 0.03, 1, 0.95])
     plt.clf()
 
     plt.close('all')
 
-  
+
 #+END_SRC
 
 #+RESULTS:
@@ -397,9 +412,9 @@ def other_plots(shock, df):
 base = model()
 df = SolveSFC(base, time=1000)
 shock = ShockModel(base_model=base, create_function=model(), variable='phi_0', increase=0.005, time = 1000)
-clock_plots(shock = shock, filename = 'Clock_1.png', variable='g_Z')
-plot_shock(shock = shock, filename = 'Shock_1.png', df=df)
-plot_norms(shock = shock, filename = 'Shock_1Norms.png', df=df)
+clock_plots(shock = shock, filename = 'Clock_1_referee.png', variable='g_Z')
+plot_shock(shock = shock, filename = 'Shock_1_referee.png', df=df)
+plot_norms(shock = shock, filename = 'Shock_1Norms_referee.png', df=df)
 other_plots(shock, df=df)
 
 shock1 = shock.round(decimals = 5).tail(1).transpose().loc['alpha':,:]
@@ -414,6 +429,7 @@ print(shock1.to_latex())
 {} &  \$\textbackslash Delta \textbackslash phi\_0\$ \\
 \midrule
 alpha     &     1.000000e+00 \\
+alpha\_k   &     3.000000e-01 \\
 gamma\_F   &     8.000000e-02 \\
 gamma\_u   &     9.000000e-02 \\
 omega     &     2.500000e-01 \\
@@ -428,21 +444,19 @@ R         &     7.000000e-01 \\
 infla     &     0.000000e+00 \\
 gC        &     0.000000e+00 \\
 real\_data &     0.000000e+00 \\
-\_K\_f\_\_1   &     1.202782e+26 \\
-\_M\_h\_\_1   &     1.906567e+27 \\
+\_K\_f\_\_1   &     5.102256e+25 \\
+\_M\_h\_\_1   &     5.661428e+26 \\
 \_MO\_\_1    &     5.860454e+26 \\
-\_Lk\_\_1    &     1.367439e+27 \\
-\_Ck\_\_1    &     3.853813e+25 \\
-\_Lf\_\_1    &    -4.691706e+25 \\
+\_Lf\_\_1    &    -1.990252e+25 \\
 \_h\_\_1     &     4.350000e-02 \\
-\_L\_\_1     &     1.320522e+27 \\
-\_M\_\_1     &     1.906567e+27 \\
+\_L\_\_1     &    -1.990252e+25 \\
+\_M\_\_1     &     5.661428e+26 \\
 \_K\_HD\_\_1  &     5.860454e+26 \\
 \_I\_h\_\_1   &     1.651634e+25 \\
 \_ph\_\_1    &     1.000000e+00 \\
 TIME      &     1.051000e+03 \\
-Ih/Y      &     2.119500e-01 \\
-I/Y       &     2.554500e-01 \\
+Ih/Y      &     4.996400e-01 \\
+I/Y       &     5.431400e-01 \\
 Z/Y       &     7.065000e-01 \\
 gY        &     2.900000e-02 \\
 \bottomrule
@@ -457,9 +471,9 @@ base = model()
 df = SolveSFC(base, time=1000)
 shock = ShockModel(base_model=base, create_function=model(), variable='omega', increase=-0.01, time = 1000)
 df1=shock
-clock_plots(shock = shock, filename = 'Clock_2.png', variable='omega')
-plot_shock(shock = shock, filename = 'Shock_2.png', df=df)
-plot_norms(shock = shock, filename = 'Shock_2Norms.png', df=df)
+clock_plots(shock = shock, filename = 'Clock_2_referee.png', variable='omega')
+plot_shock(shock = shock, filename = 'Shock_2_referee.png', df=df)
+plot_norms(shock = shock, filename = 'Shock_2Norms_referee.png', df=df)
 other_plots(shock, df)
 shock2 = shock.round(decimals = 3).tail(1).transpose().loc['alpha':,:]
 shock2.columns = ['$\Delta \omega$']
@@ -467,12 +481,13 @@ print(shock2.to_latex())
 #+END_SRC
 
 #+RESULTS:
-:results:
+#+begin_export latex
 \begin{tabular}{lr}
 \toprule
 {} &  \$\textbackslash Delta \textbackslash omega\$ \\
 \midrule
 alpha     &     1.000000e+00 \\
+alpha\_k   &     3.000000e-01 \\
 gamma\_F   &     8.000000e-02 \\
 gamma\_u   &     9.000000e-02 \\
 omega     &     2.400000e-01 \\
@@ -487,26 +502,24 @@ R         &     7.000000e-01 \\
 infla     &     0.000000e+00 \\
 gC        &     0.000000e+00 \\
 real\_data &     0.000000e+00 \\
-\_K\_f\_\_1   &     8.997916e+23 \\
-\_M\_h\_\_1   &     1.745460e+25 \\
+\_K\_f\_\_1   &     3.798556e+23 \\
+\_M\_h\_\_1   &     5.158047e+24 \\
 \_MO\_\_1    &     5.428750e+24 \\
-\_Lk\_\_1    &     1.266708e+25 \\
-\_Ck\_\_1    &     2.968848e+23 \\
-\_Lf\_\_1    &    -6.412329e+23 \\
+\_Lf\_\_1    &    -2.707036e+23 \\
 \_h\_\_1     &     3.600000e-02 \\
-\_L\_\_1     &     1.202585e+25 \\
-\_M\_\_1     &     1.745460e+25 \\
+\_L\_\_1     &    -2.707036e+23 \\
+\_M\_\_1     &     5.158047e+24 \\
 \_K\_HD\_\_1  &     5.428750e+24 \\
 \_I\_h\_\_1   &     1.272363e+23 \\
 \_ph\_\_1    &     1.000000e+00 \\
 TIME      &     1.051000e+03 \\
-Ih/Y      &     2.170000e-01 \\
-I/Y       &     2.530000e-01 \\
+Ih/Y      &     5.140000e-01 \\
+I/Y       &     5.500000e-01 \\
 Z/Y       &     7.240000e-01 \\
 gY        &     2.400000e-02 \\
 \bottomrule
 \end{tabular}
-:end:
+#+end_export
 
 ** Increase in mortgage interest rate
    
@@ -517,9 +530,9 @@ shock = ShockModel(base_model=base, create_function=model(), variable='rm', incr
 df3=shock
 shock3 = shock.round(decimals = 3).tail(1).transpose().loc['alpha':,:]
 shock3.columns = ['$\Delta rm$']
-clock_plots(shock = shock, filename = 'Clock_3.png', variable='rmo')
-plot_shock(shock = shock, filename = 'Shock_3.png', df=df)
-plot_norms(shock = shock, filename = 'Shock_3Norms.png', df=df)
+clock_plots(shock = shock, filename = 'Clock_3_referee.png', variable='rmo')
+plot_shock(shock = shock, filename = 'Shock_3_referee.png', df=df)
+plot_norms(shock = shock, filename = 'Shock_3Norms_referee.png', df=df)
 other_plots(shock, df=df)
 print(shock3.to_latex())
 #+END_SRC
@@ -531,6 +544,7 @@ print(shock3.to_latex())
 {} &   \$\textbackslash Delta rm\$ \\
 \midrule
 alpha     &  1.000000e+00 \\
+alpha\_k   &  3.000000e-01 \\
 gamma\_F   &  8.000000e-02 \\
 gamma\_u   &  9.000000e-02 \\
 omega     &  2.500000e-01 \\
@@ -545,15 +559,13 @@ R         &  7.000000e-01 \\
 infla     &  0.000000e+00 \\
 gC        &  0.000000e+00 \\
 real\_data &  0.000000e+00 \\
-\_K\_f\_\_1   &  7.143535e+23 \\
-\_M\_h\_\_1   &  1.381441e+25 \\
+\_K\_f\_\_1   &  3.015482e+23 \\
+\_M\_h\_\_1   &  4.082007e+24 \\
 \_MO\_\_1    &  4.297398e+24 \\
-\_Lk\_\_1    &  1.002726e+25 \\
-\_Ck\_\_1    &  2.326227e+23 \\
-\_Lf\_\_1    & -5.102520e+23 \\
+\_Lf\_\_1    & -2.153912e+23 \\
 \_h\_\_1     &  3.600000e-02 \\
-\_L\_\_1     &  9.517011e+24 \\
-\_M\_\_1     &  1.381441e+25 \\
+\_L\_\_1     & -2.153912e+23 \\
+\_M\_\_1     &  4.082007e+24 \\
 \_K\_HD\_\_1  &  4.297398e+24 \\
 \_I\_h\_\_1   &  9.969545e+22 \\
 \_ph\_\_1    &  1.000000e+00 \\
@@ -563,16 +575,16 @@ real\_data &  0.000000e+00 \\
 
 ** TODO Decrease in mortgage interest rate
 
-#+BEGIN_SRC python :results raw drawer table latex
+#+BEGIN_SRC python :results raw drawer table latex :eval no
 base = model()
 df = SolveSFC(base, time=1000)
 shock = ShockModel(base_model=base, create_function=model(), variable='rm', increase=-0.005, time = 1000)
 df3b=shock
 shock3b = shock.round(decimals = 3).tail(1).transpose().loc['alpha':,:]
 shock3b.columns = ['$\Downarrow rm$']
-clock_plots(shock = shock, filename = 'Clock_3b.png', variable='rmo')
-plot_shock(shock = shock, filename = 'Shock_3b.png', df=df)
-plot_norms(shock = shock, filename = 'Shock_3Normsb.png', df=df)
+clock_plots(shock = shock, filename = 'Clock_3b_referee.png', variable='rmo')
+plot_shock(shock = shock, filename = 'Shock_3b_referee.png', df=df)
+plot_norms(shock = shock, filename = 'Shock_3Normsb_referee.png', df=df)
 other_plots(shock, df=df)
 print(shock3b.to_latex())
 #+END_SRC
@@ -621,9 +633,9 @@ base = model()
 df = SolveSFC(base, time=1000)
 shock = ShockModel(base_model=base, create_function=model(), variable='infla', increase=0.05, time = 1000)
 df2=shock
-clock_plots(shock = shock, filename = 'Clock_4.png', variable='infla')
-plot_shock(shock = shock, filename = 'Shock_4.png', df=df)
-plot_norms(shock = shock, filename = 'Shock_4Norms.png', df=df)
+clock_plots(shock = shock, filename = 'Clock_4_referee.png', variable='infla')
+plot_shock(shock = shock, filename = 'Shock_4_referee.png', df=df)
+plot_norms(shock = shock, filename = 'Shock_4Norms_referee.png', df=df)
 other_plots(shock, df=df)
 
 shock4 = shock.round(decimals = 3).tail(1).transpose().loc['alpha':,:]
@@ -638,6 +650,7 @@ print(shock4.to_latex())
 {} &         \$\textbackslash pi\$ \\
 \midrule
 alpha     &  1.000000e+00 \\
+alpha\_k   &  3.000000e-01 \\
 gamma\_F   &  8.000000e-02 \\
 gamma\_u   &  9.000000e-02 \\
 omega     &  2.500000e-01 \\
@@ -652,21 +665,19 @@ R         &  7.000000e-01 \\
 infla     &  5.000000e-02 \\
 gC        &  0.000000e+00 \\
 real\_data &  0.000000e+00 \\
-\_K\_f\_\_1   &  9.991086e+25 \\
-\_M\_h\_\_1   &  1.594162e+27 \\
+\_K\_f\_\_1   &  4.237527e+25 \\
+\_M\_h\_\_1   &  4.732937e+26 \\
 \_MO\_\_1    &  4.902237e+26 \\
-\_Lk\_\_1    &  1.143855e+27 \\
-\_Ck\_\_1    &  3.203113e+25 \\
-\_Lf\_\_1    & -3.991676e+25 \\
+\_Lf\_\_1    & -1.692998e+25 \\
 \_h\_\_1     &  4.300000e-02 \\
-\_L\_\_1     &  1.103939e+27 \\
-\_M\_\_1     &  1.594162e+27 \\
+\_L\_\_1     & -1.692998e+25 \\
+\_M\_\_1     &  4.732937e+26 \\
 \_K\_HD\_\_1  &  4.902237e+26 \\
 \_I\_h\_\_1   &  1.372763e+25 \\
 \_ph\_\_1    &  1.472685e+21 \\
 TIME      &  1.051000e+03 \\
-Ih/Y      &  2.120000e-01 \\
-I/Y       &  2.550000e-01 \\
+Ih/Y      &  5.000000e-01 \\
+I/Y       &  5.430000e-01 \\
 Z/Y       &  7.070000e-01 \\
 gY        &  2.900000e-02 \\
 \bottomrule
@@ -692,6 +703,7 @@ table = pd.merge(left = table, right = shock4, left_index = True, right_index = 
 table = table.loc[:"infla",:] ######### Warning
 table.index = [ ######### Warning
     '$\\alpha$',
+    '$\\alpha_{k}$',
     '$\gamma_F$',
     '$\gamma_u$',
     '$\omega$',
@@ -705,15 +717,18 @@ table.index = [ ######### Warning
     '$R$',
     '$\pi$'
 ]
+
+table = table.drop("$R$")
+
 table.to_latex(
-    "./tabs/parameters.tex",
+    "./tabs/parameters_referee.tex",
     #column_format = 'cccccc',
-    escape=False, 
+    escape=False,
     float_format="{:0.4f}".format,
 )
 
 print(table.to_latex(
-    escape=False, 
+    escape=False,
     float_format="{:0.4f}".format,
 ))
 #+END_SRC
@@ -725,6 +740,7 @@ print(table.to_latex(
 {} &  Base scenario &  $\Delta \phi_0$ &  $\Delta \omega$ &  $\Delta rm$ &  $\pi$ \\
 \midrule
 $\alpha$      &         1.0000 &           1.0000 &           1.0000 &       1.0000 & 1.0000 \\
+$\alpha_{k}$  &         0.3000 &           0.3000 &           0.3000 &       0.3000 & 0.3000 \\
 $\gamma_F$    &         0.0800 &           0.0800 &           0.0800 &       0.0800 & 0.0800 \\
 $\gamma_u$    &         0.0900 &           0.0900 &           0.0900 &       0.0900 & 0.0900 \\
 $\omega$      &         0.2500 &           0.2500 &           0.2400 &       0.2500 & 0.2500 \\
@@ -735,7 +751,6 @@ $u_N$         &         0.8000 &           0.8000 &           0.8000 &       0.8
 $v$           &         1.2000 &           1.2000 &           1.2000 &       1.2000 & 1.2000 \\
 $\phi_0$      &         0.0250 &           0.0300 &           0.0250 &       0.0250 & 0.0250 \\
 $\phi_1$      &         0.1000 &           0.1000 &           0.1000 &       0.1000 & 0.1000 \\
-$R$           &         0.7000 &           0.7000 &           0.7000 &       0.7000 & 0.7000 \\
 $\pi$         &         0.0000 &           0.0000 &           0.0000 &       0.0000 & 0.0500 \\
 \bottomrule
 \end{tabular}
@@ -743,7 +758,7 @@ $\pi$         &         0.0000 &           0.0000 &           0.0000 &       0.0
 
 *** Figure 1
 
-#+BEGIN_SRC python :results graphics file :file ./figs/Compared_Shocks_1.png :cache no
+#+BEGIN_SRC python :results graphics file :file ./figs/Compared_Shocks_1_referee.png :cache no
 base = model()
 df = SolveSFC(base, time=1000)
 df["Z/Y"] = df["Z"]/df["Y"]
@@ -834,18 +849,17 @@ sns.despine()
 plt.tight_layout(rect=[0, 0.03, .85, 0.95])
 ax[1,1].legend(loc='center left', bbox_to_anchor=(1.00, 1.25))
 #plt.show()
-fig.savefig("./figs/Compared_Shocks_1.png", dpi = 300)
+fig.savefig("./figs/Compared_Shocks_1_referee.png", dpi = 300)
 #+END_SRC
 
 #+RESULTS:
-[[file:./figs/Compared_Shocks_1.png]]
+[[file:./figs/Compared_Shocks_1_referee.png]]
 
 
-[[file:./figs/Compared_Shocks_1.png]]
 
 *** Figure 2
     
-#+BEGIN_SRC python :results graphics file :file ./figs/Compared_Shocks_2.png :cache no
+#+BEGIN_SRC python :results graphics file :file ./figs/Compared_Shocks_2_referee.png :cache no
 base = model()
 df = SolveSFC(base, time=1000)
 df["Z/Y"] = df["Z"]/df["Y"]
@@ -897,19 +911,21 @@ sns.despine()
 plt.tight_layout(rect=[0, 0.03, .85, 0.95])
 ax[1,1].legend(loc='center left', bbox_to_anchor=(1.0, 1.25))
 #plt.show()
-fig.savefig("./figs/Compared_Shocks_2.png", dpi = 600)
+fig.savefig("./figs/Compared_Shocks_2_referee.png", dpi = 600)
 #+END_SRC
 
+#+RESULTS:
+[[file:./figs/Compared_Shocks_2_referee.png]]
 
 
 
-[[file:./figs/Compared_Shocks_2.png]]
+
 
 
 ** Real data                                                         :ignore:
 
 *** Simulation   
-#+BEGIN_SRC python :tangle ./codes/Simulation.py
+#+BEGIN_SRC python :tangle ./codes/Simulation.py :eval no
 data = pd.read_csv("./data/OwnInterestRate_data.csv", parse_dates=True, index_col=[0])
 
 
@@ -959,7 +975,7 @@ shock["Ih/Y"] = shock["I_h"] / shock["Y"]
 
 *** Plots
 
-#+BEGIN_SRC python :tangle ./codes/Simulation.py :results graphics
+#+BEGIN_SRC python :tangle ./codes/Simulation.py :results graphics :eval no
 base = model()
 df = SolveSFC(base, time=1000)
 df["Z/Y"] = df["Z"] / df["Y"]
@@ -1092,16 +1108,14 @@ fig.savefig("./figs/Real_Shocks_2.png", dpi=600)
 
 
 * Numerical Simulations                                              :ignore:
-  #+LATEX: \label{sec:Experiments}
+  #+LATEX: \label{se    c:Experiments}
 
 ** Introduction                                                      :ignore:
 
-In this Section, we present the results of the following numerical experiments: 
+In this Section, we present the results of the following numerical experiments[fn::@@latex:\myRed{It is worth mentioning that we use \citeauthor*{fazzari-2020-deman-led}'s  \citeyear{fazzari-2020-deman-led} parameter values calibrated for the U.S. economy for a similar time range (from 1980 to 2016)}@@.]:
     (i) wage-share decrease;
     (ii) house price inflation;
     (iii) benchmark interest rate increase.
-In order to evaluate if our model is able to reproduce some stylized facts, we also perform a numerical simulation with US data of houses own rate of interest (from 1992 to 2019). 
-Before we move foward, it is worth mentioning that we use \citeauthor*{fazzari-2020-deman-led}'s  citeyear:fazzari-2020-deman-led parameter values calibrated for the U.S. economy for a similar time range (from 1980 to 2016).
 Our first experiment assess if income distribution has a level effect on output — as in cite:mandarino-2020-worker-debt — or growth rate effect — as in cite:brochier_supermultiplier_2018.
 Real estate inflation increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section ref:sec:empirical while the last simulation aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix ref:append:Data presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
@@ -1114,10 +1128,6 @@ Finally, Appendix \ref{Appen:Sensibility} presents a primer parameters sensibili
 #+END_COMMENT
 
 
-#+RESULTS:
-:results:
-# Out [2]: 
-:end:
 
 ** Wage-share decrease
    #+LATEX: \label{sec:Exp1}
@@ -1127,7 +1137,7 @@ So, aggregate demand growth level is temporarily smaller than baseline as a resu
 As a consequence of this negative level effect, both accumulation growth rate and marginal propensity to invest temporally decline while NCC autonomous expenditures share on GDP increases.
 Since NCC autonomous expenditures growth rate remains unchanged and its share on GDP increases, aggregate demand grows faster than accumulation rate.
 As a result, degree of capacity utilization is higher than the normal one.
-During the traverse, marginal propensity to invest endogenously adjust to discrepancies between actual and normal capacity utilization rates.
+\myRed{Towards the long-run equilibrium}, marginal propensity to invest endogenously adjust to discrepancies between actual and normal capacity utilization rates.
 Consequently, non-residential investment growth rate increases faster than aggregate demand.
 This endogenous adjustment process continues as long as actual rate of capacity utilization is different from the normal one.
 In summary, we report standards SSM model results:
@@ -1161,7 +1171,7 @@ Since firms react to discrepancies between actual and normal degree of capacity 
 is temporally higher than GDP growth rate due to marginal propensity to invest adjustment.
 Furthermore, capitalists' disposable income also increases as a result of the already mentioned higher GDP growth rate.
 Since loans interest remains unchanged, capitalists' indebtedness ratio decreases.
-During the traverse, gross and net profit rate are temporally close to each other as a result of profits level increase, so firms' indebtedness decreases as well.
+\myRed{Towards the long-run equilibrium}, gross and net profit rate are temporally close to each other as a result of profits level increase, so firms' indebtedness decreases as well.
 Therefore, similar to textcite:mandarino-2020-worker-debt, we also report paradox of debt.
 
 In summary, we report SSM standard long-run results:
@@ -1219,7 +1229,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 	%\resizebox{\textwidth}{!}{%
 	\begin{tabular}{c|c|c|c||c|c|c}
 		\hline\hline
-		\multirow{2}{*}{}                    & \multicolumn{3}{c||}{\textbf{traverse ($h \neq h^\star$)}} & \multicolumn{3}{c}{\textbf{Long-run ($h = h^\star$)}}                                                                                                            \\ \cline{2-7}
+		\multirow{2}{*}{}                    & \multicolumn{3}{c||}{\textbf{\myRed{Out of equilibrioum ($h \neq h^\star$)}}} & \multicolumn{3}{c}{\textbf{Long-run ($h = h^\star$)}}                                                                                                            \\ \cline{2-7}
 		                                     & \textbf{$\Downarrow \omega$}                               & \textbf{$\Uparrow \pi$}                               & \textbf{$\Uparrow rm$} & \textbf{$\Downarrow \omega$} & \textbf{$\Uparrow \pi$} & \textbf{$\Uparrow rm$} \\ \hline
 		\textbf{$g$}                         & -                                                          & +                                                     & -                      & 0                            & +                       & -                      \\ \hline
 		\textbf{$g_Z$}                       & 0                                                          & +                                                     & -                      & 0                            & +                       & -                      \\ \hline
@@ -1234,78 +1244,35 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 \end{table}
 #+END_SRC
 
-#+RESULTS:
-#+begin_export latex
-\begin{table}[H]
-	\centering
-	\caption{Shocks summary (compared to baseline)}
-	\label{ResumoChoques}
-	%\resizebox{\textwidth}{!}{%
-	\begin{tabular}{c|c|c|c||c|c|c}
-		\hline\hline
-		\multirow{2}{*}{}                    & \multicolumn{3}{c||}{\textbf{traverse ($h \neq h^\star$)}} & \multicolumn{3}{c}{\textbf{Long-run ($h = h^\star$)}}                                                                                                            \\ \cline{2-7}
-		                                     & \textbf{$\Downarrow \omega$}                               & \textbf{$\Uparrow \pi$}                               & \textbf{$\Uparrow rm$} & \textbf{$\Downarrow \omega$} & \textbf{$\Uparrow \pi$} & \textbf{$\Uparrow rm$} \\ \hline
-		\textbf{$g$}                         & -                                                          & +                                                     & -                      & 0                            & +                       & -                      \\ \hline
-		\textbf{$g_Z$}                       & 0                                                          & +                                                     & -                      & 0                            & +                       & -                      \\ \hline
-		\textbf{$u$}                         & -                                                          & +                                                     & -                      & 0                            & 0                       & 0                      \\ \hline
-		\textbf{$h$}                         & -                                                          & +                                                     & -                      & 0                            & +                       & -                      \\ \hline
-		\textbf{$k$}                         & +                                                          & -                                                     & +                      & +                            & -                       & +                      \\ \hline
-		\textbf{$\frac{Z}{Y}$}               & +                                                          & -                                                     & +                      & +                            & -                       & +                      \\ \hline
-		\textit{$r_m\frac{(D - M)}{K_{HD}}$} & +                                                          & -                                                     & +                      & 0                            & -                       & +                      \\ \hline\hline
-	\end{tabular}%
-	%}
-	\caption*{\textbf{Source:} Authors' Elaboration}
-\end{table}
-#+end_export
 
 
 *** Figure I                                                         :ignore:
-#+BEGIN_SRC latex
-\begin{figure}[htb]
-	\centering
-	\caption{Experiments simulations (I)}
-	\label{fig:results_1}
-	\includegraphics[width=.8\textwidth]{./figs/Compared_Shocks_1.png}
-	\caption*{\textbf{Source:} Authors' elaboration}
-\end{figure}
-#+END_SRC
 
-#+RESULTS:
 #+begin_export latex
 \begin{figure}[htb]
 	\centering
 	\caption{Experiments simulations (I)}
 	\label{fig:results_1}
-	\includegraphics[width=.8\textwidth]{./figs/Compared_Shocks_1.png}
+	\includegraphics[width=.8\textwidth]{./figs/Compared_Shocks_1_referee.png}
 	\caption*{\textbf{Source:} Authors' elaboration}
 \end{figure}
 #+end_export
 
 *** Figure II                                                        :ignore:
-#+BEGIN_SRC latex
-\begin{figure}[htb]
-	\centering
-	\caption{Experiments simulations (II)}
-	\label{fig:results_2}
-	\includegraphics[width=.8\textwidth]{./figs/Compared_Shocks_2.png}
-	\caption*{\textbf{Source:} Authors' elaboration}
-\end{figure}
-#+END_SRC
 
-#+RESULTS:
 #+begin_export latex
 \begin{figure}[htb]
 	\centering
 	\caption{Experiments simulations (II)}
 	\label{fig:results_2}
-	\includegraphics[width=.8\textwidth]{./figs/Compared_Shocks_2.png}
+	\includegraphics[width=.8\textwidth]{./figs/Compared_Shocks_2_referee.png}
 	\caption*{\textbf{Source:} Authors' elaboration}
 \end{figure}
 #+end_export
 
 
 
-** Plugging real data
+** Plugging real data :noexport:
 #+LATEX: \label{real_sim}
 
 Finally, we include houses own rate of interest data  discussed in section ref:sec:empirical (see Figure ref:propria_investo) into our model.
