Trying to increase performance. World: Torus -> Box.

--- a/Writings/ABSFC/NetLogo_Models.org
+++ b/Writings/ABSFC/NetLogo_Models.org
@@ -151,6 +151,16 @@ This is the first model.
 | Transcluded?                      |        |
 | Current version?                  |        |
 
+** TODO Cluster geography (=cluster-geo=) <2021-07-10 sáb>
+
+*** Model Info
+
+*** Changes between versions
+
+
+*** Before move on
+
+
 ** TODO Homogeneous wages and no firms (=homogeneous-wages-nofirms=) <2021-07-15 qui>
 
 *** Model Info
